--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-element-to-jsx-string": "^15.0.0",
     "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.2"
